# wine

./: .env.example  .flake8  .gitignore  .mypy.ini  README.md  filters.py  index.html  load_data.py  main.py  pyproject.toml  requirements.txt  settings.py  template.html  wines.xlsx
